--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ parso==0.8.3
 pickleshare==0.7.5
 Pillow==9.3.0
 pkgutil_resolve_name==1.3.10
+playsound==1.2.2
 prometheus-client==0.15.0
 prompt-toolkit==3.0.33
 protobuf==3.20.3
